fix : test failures